@@ -3,6 +3,10 @@ Changelog for relaydelay.pl and associated files:
 
 UNRELEASED -
 
+  2003-07-23 - Added checks to allow manual blacklisting within the greylist 
+    db based on mail_from address/domain.  Also added some extra info to 
+    a few debugging messages.
+
   2003-07-22 - Added functionality to check the sendmail access db and 
     bypass the greylist checks if an appropriate entry is found.
     Also rearranged the checks so that rows in the greylist database will 
